--- a/MiraclePill/Base.lproj/Main.storyboard
+++ b/MiraclePill/Base.lproj/Main.storyboard
@@ -6,6 +6,7 @@
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11757"/>
+        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
@@ -21,30 +22,50 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="miraclePillEmoji" translatesAutoresizingMaskIntoConstraints="NO" id="xft-Xl-wkk">
-                                <rect key="frame" x="102" y="67" width="165" height="109"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="MAGIC PILLS" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="9DL-f3-qAG">
+                                <rect key="frame" x="136.5" y="140" width="102" height="21"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <color key="textColor" red="0.36078431372549019" green="0.36470588235294116" blue="0.38039215686274508" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <color key="highlightedColor" red="0.36498326063156128" green="0.36465966701507568" blue="0.38119277358055115" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                            </label>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="miraclePillEmoji" translatesAutoresizingMaskIntoConstraints="NO" id="CB1-AC-1jR">
+                                <rect key="frame" x="142.5" y="42" width="90" height="90"/>
                                 <constraints>
-                                    <constraint firstAttribute="width" constant="165" id="0H9-Xh-B9l"/>
-                                    <constraint firstAttribute="height" constant="109" id="nHY-at-pbh"/>
+                                    <constraint firstAttribute="width" constant="90" id="G0d-xl-Pm8"/>
+                                    <constraint firstAttribute="height" constant="90" id="YID-Cq-DrN"/>
                                 </constraints>
                             </imageView>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Q 150" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Iqh-FG-X8I">
+                                <rect key="frame" x="164" y="169" width="46" height="21"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <color key="textColor" red="0.36078431372549019" green="0.36470588235294116" blue="0.38039215686274508" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <view alpha="0.34999999999999998" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="F5D-pH-GlZ">
+                                <rect key="frame" x="36" y="200" width="303" height="1"/>
+                                <color key="backgroundColor" white="0.33333333333333331" alpha="1" colorSpace="calibratedWhite"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="1" id="CIL-aU-QyW"/>
+                                </constraints>
+                            </view>
                         </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
-                            <constraint firstItem="xft-Xl-wkk" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" constant="-3.5" id="3Z0-Rc-GnD"/>
-                            <constraint firstItem="xft-Xl-wkk" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" constant="-3.5" id="6dM-G7-xtV"/>
-                            <constraint firstItem="xft-Xl-wkk" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" constant="-3.5" id="DET-xp-vVZ"/>
-                            <constraint firstItem="xft-Xl-wkk" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" constant="-3.5" id="ehW-gw-Vif"/>
-                            <constraint firstItem="xft-Xl-wkk" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="gbs-O7-cxv"/>
-                            <constraint firstItem="xft-Xl-wkk" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" constant="-3.5" id="mge-GG-ebh"/>
-                            <constraint firstItem="xft-Xl-wkk" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" constant="-3.5" id="oLB-L6-faw"/>
-                            <constraint firstItem="xft-Xl-wkk" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" constant="47" id="u7A-in-ZC1"/>
+                            <constraint firstItem="CB1-AC-1jR" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="37v-fh-Fy5"/>
+                            <constraint firstItem="CB1-AC-1jR" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" constant="22" id="9Kk-ck-Z5k"/>
+                            <constraint firstItem="Iqh-FG-X8I" firstAttribute="centerX" secondItem="9DL-f3-qAG" secondAttribute="centerX" id="Mg3-jh-1rc"/>
+                            <constraint firstItem="F5D-pH-GlZ" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leadingMargin" constant="20" id="OMO-Aw-JhZ"/>
+                            <constraint firstItem="9DL-f3-qAG" firstAttribute="centerX" secondItem="CB1-AC-1jR" secondAttribute="centerX" id="Sk4-GP-4M9"/>
+                            <constraint firstItem="9DL-f3-qAG" firstAttribute="top" secondItem="CB1-AC-1jR" secondAttribute="bottom" constant="8" id="hT2-iz-VOP"/>
+                            <constraint firstItem="F5D-pH-GlZ" firstAttribute="top" secondItem="Iqh-FG-X8I" secondAttribute="bottom" constant="10" id="kON-zY-QCE"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="F5D-pH-GlZ" secondAttribute="trailing" constant="20" id="xmC-Gg-1iT"/>
+                            <constraint firstItem="Iqh-FG-X8I" firstAttribute="top" secondItem="9DL-f3-qAG" secondAttribute="bottom" constant="8" id="y1T-sd-ckg"/>
                         </constraints>
                     </view>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="24.375" y="34.859154929577464"/>
+            <point key="canvasLocation" x="23.188405797101453" y="34.239130434782609"/>
         </scene>
     </scenes>
     <resources>
